# iot-esp32s3

./: README.md
esp32_iot_system/: .cproject  .project  CMakeLists.txt  HARDWARE_SETUP.md  QUICK_START.md  README.md  sdkconfig.defaults  sdkconfig.old  test_simulation.c
esp32_iot_system/main/: .cproject  CMakeLists.txt  i2c_scanner.c  i2c_scanner.h  main.c  nvs_storage.c  nvs_storage.h  relay_control.c  relay_control.h  sensors.c  sensors.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
esp32_iot_system/main/web/: index.html  script.js  style.css
